// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Arrange> renders correctly 1`] = `
<div
  className="horizontal"
>
  Text
</div>
`;

exports[`<Arrange> responds to a vertical prop 1`] = `
<div
  className="vertical"
>
  Text
</div>
`;
